--- a/index.html
+++ b/index.html
@@ -22,5 +22,12 @@
       <div style="background-color: #5390d9"></div>
       <div style="background-color: #6930c3"></div>
     </section>
+
+    <h2>Another Example -- using Flex shorthand</h2>
+    <main>
+      <section class="sidebar"></section>
+      <section class="maincontent"></section>
+      <section class="sidebar"></section>
+    </main>
   </body>
 </html>
